<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:id="@+id/nestedScrollView"
    tools:context="com.example.penguinn.hugproject.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:textColor="#000"
            android:id="@+id/textViewstu"
            android:text="ข้อมูลนักเรียน" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_fname"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextLastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_lname"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18dp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            android:id="@+id/textViewparent"
            android:text="ข้อมูลผู้ปกครอง" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutParentFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextParentFirstName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_parent_fname"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutParentLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextParentLastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_parent_lname"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutParentPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextParentPhone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_parent_phone"
                android:inputType="phone"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutParentEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextParentEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textSize="15dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:background="@drawable/background_login"
            android:text="@string/text_register" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextViewLoginLink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/text_member"
            android:textSize="16sp"/>
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>